Complete base exercise

--- a/01_Getting_&_Knowing_Your_Data/Occupation/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/Occupation/Exercises.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,14 +21,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/05/28 21:26:31 WARN Utils: Your hostname, taliandorogd resolves to a loopback address: 127.0.1.1; using 192.168.0.32 instead (on interface wlp5s0)\n",
+      "23/05/28 21:26:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/05/28 21:26:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.getOrCreate()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,6 +64,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,14 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/05/28 21:29:43 WARN SparkContext: The path https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user has been added already. Overwriting of added paths is not supported in the current version.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark import SparkFiles\n",
+    "spark.sparkContext.addFile(\"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\")\n",
+    "user_id = spark.read.csv(SparkFiles.get(\"u.user\"), sep = '|', header = True)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,15 +102,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---+------+-------------+--------+\n",
+      "|user_id|age|gender|   occupation|zip_code|\n",
+      "+-------+---+------+-------------+--------+\n",
+      "|      1| 24|     M|   technician|   85711|\n",
+      "|      2| 53|     F|        other|   94043|\n",
+      "|      3| 23|     M|       writer|   32067|\n",
+      "|      4| 24|     M|   technician|   43537|\n",
+      "|      5| 33|     F|        other|   15213|\n",
+      "|      6| 42|     M|    executive|   98101|\n",
+      "|      7| 57|     M|administrator|   91344|\n",
+      "|      8| 36|     M|administrator|   05201|\n",
+      "|      9| 29|     M|      student|   01002|\n",
+      "|     10| 53|     M|       lawyer|   90703|\n",
+      "|     11| 39|     F|        other|   30329|\n",
+      "|     12| 28|     F|        other|   06405|\n",
+      "|     13| 47|     M|     educator|   29206|\n",
+      "|     14| 45|     M|    scientist|   55106|\n",
+      "|     15| 49|     F|     educator|   97301|\n",
+      "|     16| 21|     M|entertainment|   10309|\n",
+      "|     17| 30|     M|   programmer|   06355|\n",
+      "|     18| 35|     F|        other|   37212|\n",
+      "|     19| 40|     M|    librarian|   02138|\n",
+      "|     20| 42|     F|    homemaker|   95660|\n",
+      "|     21| 26|     M|       writer|   30068|\n",
+      "|     22| 25|     M|       writer|   40206|\n",
+      "|     23| 30|     F|       artist|   48197|\n",
+      "|     24| 21|     F|       artist|   94533|\n",
+      "|     25| 39|     M|     engineer|   55107|\n",
+      "+-------+---+------+-------------+--------+\n",
+      "only showing top 25 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id.show(25)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,15 +160,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(user_id='934', age='61', gender='M', occupation='engineer', zip_code='22902'),\n",
+       " Row(user_id='935', age='42', gender='M', occupation='doctor', zip_code='66221'),\n",
+       " Row(user_id='936', age='24', gender='M', occupation='other', zip_code='32789'),\n",
+       " Row(user_id='937', age='48', gender='M', occupation='educator', zip_code='98072'),\n",
+       " Row(user_id='938', age='38', gender='F', occupation='technician', zip_code='55038'),\n",
+       " Row(user_id='939', age='26', gender='F', occupation='student', zip_code='33319'),\n",
+       " Row(user_id='940', age='32', gender='M', occupation='administrator', zip_code='02215'),\n",
+       " Row(user_id='941', age='20', gender='M', occupation='student', zip_code='97229'),\n",
+       " Row(user_id='942', age='48', gender='F', occupation='librarian', zip_code='78209'),\n",
+       " Row(user_id='943', age='22', gender='M', occupation='student', zip_code='77841')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.tail(10)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,14 +200,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "943"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.count()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,14 +230,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(user_id.columns)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -124,14 +260,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['user_id', 'age', 'gender', 'occupation', 'zip_code']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.columns"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,9 +295,12 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# NA"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -156,14 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StructType([StructField('user_id', StringType(), True), StructField('age', StringType(), True), StructField('gender', StringType(), True), StructField('occupation', StringType(), True), StructField('zip_code', StringType(), True)])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.schema"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,14 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[occupation: string]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.select(\"occupation\")"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,14 +369,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.select(\"occupation\").distinct().count()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,14 +399,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'student'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id.groupby(\"occupation\").count().sort(\"count\", ascending = False).collect()[0][\"occupation\"]"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,14 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# NA"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,14 +448,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------------+-----------------+------+-------------+------------------+\n",
+      "|summary|          user_id|              age|gender|   occupation|          zip_code|\n",
+      "+-------+-----------------+-----------------+------+-------------+------------------+\n",
+      "|  count|              943|              943|   943|          943|               943|\n",
+      "|   mean|            472.0|34.05196182396607|  null|         null| 50868.78810810811|\n",
+      "| stddev|272.3649512449549|12.19273973305903|  null|         null|30891.373254138176|\n",
+      "|    min|                1|               10|     F|administrator|             00000|\n",
+      "|    max|               99|               73|     M|       writer|             Y1A6B|\n",
+      "+-------+-----------------+-----------------+------+-------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id.describe().show()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -252,14 +484,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------------+\n",
+      "|summary|   occupation|\n",
+      "+-------+-------------+\n",
+      "|  count|          943|\n",
+      "|   mean|         null|\n",
+      "| stddev|         null|\n",
+      "|    min|administrator|\n",
+      "|    max|       writer|\n",
+      "+-------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id.select(\"occupation\").describe().show()"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,14 +520,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34.05196182396607"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "user_id = user_id.select(\"age\").withColumn(\"age\", col(\"age\").cast(IntegerType()))\n",
+    "user_id.groupBy().avg(\"age\").collect()[0][\"avg(age)\"]"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -284,32 +553,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "|age|count|\n",
+      "+---+-----+\n",
+      "|  7|    1|\n",
+      "| 10|    1|\n",
+      "| 73|    1|\n",
+      "| 11|    1|\n",
+      "| 66|    1|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts = user_id.groupBy(\"age\").count().sort(\"count\")\n",
+    "min_count = counts.groupBy().min(\"count\").collect()[0][\"min(count)\"]\n",
+    "counts.filter(col(\"count\") == min_count).show()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
